# VEIL

./: .gitignore  LICENSE.md  README.md  build.sh  client_install.sh  client_uninstall.sh  crypt-setup.sh  gen-client-crypt.sh  veil-client.plist.template  veil.conf.example  veil.conf.template  veil.service  veil.service.template
certs/: crypto-gen.sh
cli/: Cargo.toml  veilctl.sh
cli/src/: main.rs
client/: Cargo.toml  cfg.toml.example
client-service/: Cargo.toml  conf_grammar.pest
client-service/src/: conf.rs  main.rs
client/src/: commands.rs  lib.rs  main.rs  setup.rs  tls.rs
config/: server.cnf
server/: Cargo.toml  README.md  cfg.toml.example  whitelist.txt
server/src/: handshake.rs  icmp.rs  main.rs
server/src/encryption/: mod.rs
server/src/forwarding/: icmp.rs  mod.rs  tcp.rs  udp.rs
systemd/: install.sh  veil.service
systemd/veil-daemon/: Cargo.toml  cfg.toml
systemd/veil-daemon/src/: conf.rs  main.rs
ui/: angular.json  package-lock.json  package.json
ui/src/: index.html
ui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.prod.conf.json
ui/src-tauri/icons/: icon.icns
ui/src/app/: app.component.css  app.component.html  app.component.ts
ui/src/app/services/: theme.service.ts
ui/src/assets/color-schemes/: dark.css
veil-daemon/src/: conf.rs
vpn-core/: Cargo.toml
vpn-core/src/: lib.rs  tcp.rs
vpn-core/src/network/: dhc.rs  mod.rs
vpn-core/src/system/: mod.rs
vpn-core/src/system/unix/: linux.rs  macos.rs
vpn-core/src/utils/: dhc.rs  error.rs  logs.rs  mod.rs  shared.rs  tls.rs  utun.rs
(+2 files in other folders)
