[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "2.0.1"
ctrlc = "3.4.5"
log = "0.4.27"
pnet = "0.35.0"
rustls = "0.23.25"
serde = { version = "1.0.219", features = ["serde_derive"]}
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
toml-cfg = "0.2.0"
vpn-core = { path = "../vpn-core" }
