[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
libc = "0.2.172"
log = "0.4.27"
pnet = "0.35.0"
rand = "0.9.1"
rustls = "0.23.25"
rustls-pemfile = "2.2.0"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
vpn-core = { path = "../vpn-core"}
