[package]
name = "veil-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
client = { path = "../../client" }
vpn-core = { path = "../../vpn-core/" }
log = "0.4.27"
pest = "2.8.0"
pest_derive = "2.8.0"
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
bincode = "2.0.1"